// @Entity('password_reset_otps'): cột id, user_id, otp_code, is_used, expires_at, created_at + method markUsed()/isValid(now)
