// @Entity('refresh_tokens'): cột id, user_id, token_hash, is_revoked, expires_at, created_at + method revoke()/isExpired()
