// @Entity('departments'): cột id, name(UNIQUE active), address, description, deleted_at, timestamps; method softDelete(), restore(), isActive()
