// @Entity('meeting_summaries'): meeting_id UNIQUE (1-1), summary_text, status; method markCompleted(text)
