// @Entity('transcript_blocks'): cột meeting_id, sequence_number, text, speaker_label, start/end_time; ràng buộc start_time<end_time; method renameSpeaker()
