// @Entity('notifications'): cột user_id, meeting_id, type(ENUM), message, is_read; method markRead(); factory tạo theo loại event
