// @Entity('users'): đầy đủ cột theo thiết kế DB, @ManyToOne→Department (department_id NOT NULL); method deactivate()/activate(), canSeeMeetingOf(deptId), isAdmin()
